2004-06-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (DeleteTab, Destroy): improve the 'exit' handling so
	that 'exit' in the first created tab doesn't do a full exit.
	'exit' in the last tab of the first created console still exits
	tkcon, fixing that requires a rearch of the console
	creation/management.
	(InitTab): Have the <Configure> binding only fire for the root
	window, not for each tab.
	(GotoTab): Keep tabs around - just raise/lower instead of grid
	remove/add.  break on Next/Prev Tab binding to get focus right.
	(Prompt): return if console w doesn't exist

2004-06-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: add [X] tab delete button and Console -> Delete Tab
	menu item. [Bug 970785]

2004-05-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (observe): allow observe of 'proc'

2004-03-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::EvalSocketEvent): correctly handle socket
	events after attachment changes

2004-03-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: correct 'exit' in extra tabs.
	make tkconfixed font Courier -12 (was Courier 10), use it on unix.
	Add extra space for OS X/Aqua in statusbar (for resize handle).
	Only use -overrelief in 8.4

2004-02-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::InitUI): check existence of tcl_platform(os)
	as it doesn't exist in the Tcl plugin.
	Show Attach info in tab text, maintain namespace attachment
	between console switches.
	(::tkcon::InterpEval, Interps): beware safe interps with Tk

2004-02-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: brought code back to 8.0 compatability.
	Use $_ as last cached result var (was ${}).
	Ensure hoterrors garbage collection occurs across all tabs.

2004-01-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: first whack at tabbed consoles

2004-01-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: don't use menu tearoffs
	remove recognizable email addresses from source