@@ -148,8 +148,7 @@ for commenting (why would you interactively put comments in?).
 </TD></TR></TABLE>
 
 <HR NOSHADE SIZE=1>
-<ADDRESS><FONT SIZE=2>&copy;
-<A HREF="mailto:jeff.hobbs@acm.org">Jeffrey Hobbs</A></FONT></ADDRESS>
+<ADDRESS><FONT SIZE=2>&copy; Jeffrey Hobbs</FONT></ADDRESS>
 
 </BODY>
 </HTML>
