@@ -94,8 +94,7 @@ is interpreted as a case insensitive regexp pattern (defaults to {.*})
 </TD></TR></TABLE>
 
 <HR NOSHADE SIZE=1>
-<ADDRESS><FONT SIZE=2>&copy;
-<A HREF="mailto:jeff.hobbs@acm.org">Jeffrey Hobbs</A></FONT></ADDRESS>
+<ADDRESS><FONT SIZE=2>&copy; Jeffrey Hobbs</FONT></ADDRESS>
 
 </BODY>
 </HTML>
