@@ -119,8 +119,7 @@ level.  <i>level</i> defaults to the current level.
 </TD></TR></TABLE>
 
 <HR NOSHADE SIZE=1>
-<ADDRESS><FONT SIZE=2>&copy;
-<A HREF="mailto:jeff.hobbs@acm.org">Jeffrey Hobbs</A></FONT></ADDRESS>
+<ADDRESS><FONT SIZE=2>&copy; Jeffrey Hobbs</FONT></ADDRESS>
 
 </BODY>
 </HTML>
