@@ -52,8 +52,7 @@ Archives</A> (high speed server)</H4>
 
 Please <B>read the following pages carefully</B> to fully understand the
 features AND limitations of TkCon.  I'm always open to suggestions for
-improvement.  Send them to my 
-<A HREF="mailto:jeff.hobbs@acm.org">suggestion box</A>.
+improvement.
  <P>
 </DIV>
 </TD></TR><TR><TD>
@@ -76,8 +75,7 @@ improvement.  Send them to my
 </TD></TR></TABLE>
 
 <HR NOSHADE SIZE=1>
-<ADDRESS><FONT SIZE=2>&copy;
-<A HREF="mailto:jeff.hobbs@acm.org">Jeffrey Hobbs</A></FONT></ADDRESS>
+<ADDRESS><FONT SIZE=2>&copy; Jeffrey Hobbs</FONT></ADDRESS>
 
 </BODY>
 </HTML>
