@@ -1,6 +1,6 @@
 		   * COPYRIGHT AND LICENSE TERMS *
 
-This software is copyrighted by Jeffrey Hobbs <jeff.hobbs@acm.org>.  The
+This software is copyrighted by Jeffrey Hobbs <jeff.hobbs at acm.org>.  The
 following terms apply to all files associated with the software unless
 explicitly disclaimed in individual files.
 
