@@ -31,7 +31,7 @@ height="31" border="0" alt="SourceForge Logo"></A>
 <TH><A HREF="license.terms">License</A></TH>
 </TR><TR>
 <TH COLSPAN=2><A HREF="plugin.html">Online Demo</A>
-(requires <A HREF="http://tcl.activestate.com/software/plugin/">Tk plugin</A>)</TH>
+(requires <A HREF="http://www.tcl.tk/software/plugin/">Tk plugin</A>)</TH>
 <TH COLSPAN=3><A HREF="nontcl.html">Using TkCon with other Tk Languages</A></TH>
 </TR>
 </TABLE>
@@ -70,8 +70,7 @@ more info.
 </TD></TR></TABLE>
 
 <HR NOSHADE SIZE=1>
-<ADDRESS><FONT SIZE=2>&copy;
-<A HREF="mailto:jeff.hobbs@acm.org">Jeffrey Hobbs</A></FONT></ADDRESS>
+<ADDRESS><FONT SIZE=2>&copy; Jeffrey Hobbs</FONT></ADDRESS>
 
 </BODY>
 </HTML>
