@@ -98,7 +98,7 @@ on that variable occurs (must be read, write or unset).
 
 <HR NOSHADE SIZE=1>
 <ADDRESS><FONT SIZE=2>&copy;
-<A HREF="mailto:jeff.hobbs@acm.org">Jeffrey Hobbs</A></FONT></ADDRESS>
+Jeffrey Hobbs</FONT></ADDRESS>
 
 </BODY>
 </HTML>
