@@ -31,7 +31,7 @@ height="31" border="0" alt="SourceForge Logo"></A>
 <TH><A HREF="license.terms">License</A></TH>
 </TR><TR>
 <TH COLSPAN=2 CLASS="hi"><A HREF="plugin.html" CLASS="hi">Online Demo</A>
-(requires <A HREF="http://tcl.activestate.com/software/plugin/">Tk plugin</A>)</TH>
+(requires <A HREF="http://www.tcl.tk/software/plugin/">Tk plugin</A>)</TH>
 <TH COLSPAN=3><A HREF="nontcl.html">Using TkCon with other Tk Languages</A></TH>
 </TR>
 </TABLE>
@@ -44,12 +44,30 @@ This is the full tkcon script when run inside the plugin.  It feels like a
 stripped down version of tkcon, but the only limitations are those
 established by the plugin.  You can test the basic console features and get
 a feel for the mutli-color output.  Below the demo are some ideas to try
-out.  v2 of the plugin is distributed with a megawidget version of tkcon for
-debugging tclets.  The demo below uses rev 1.28 of tkcon in CVS
-(this correlates to v2.1 of tkcon).
+out.  v2+ of the plugin is distributed with a megawidget version of tkcon for
+debugging tclets.  The demo below uses the CVS head of tkcon.
 
 <P>
-<embed src="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/tkcon/tkcon/tkcon.tcl?rev=HEAD&content-type=application/x-tcl" width=630 height=350>
+  <OBJECT
+        ID="PluginHostCtrl"
+        CLASSID="CLSID:14E78123-A693-4F27-B6EE-DDDE18F93D3A"
+        WIDTH="600"
+        HEIGHT="350"
+>
+          <PARAM name="type" value="application/x-tcl"/>
+          <PARAM name="pluginspage" value="http://www.tcl.tk/software/plugin/"/>
+          <PARAM name="src"  value="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/tkcon/tkcon/tkcon.tcl?rev=HEAD&content-type=application/x-tcl"/>
+
+        <EMBED
+          TYPE="application/x-tcl"
+          PLUGINSPAGE="http://www.tcl.tk/software/plugin/"
+          FRAMEBORDER="NO"
+          WIDTH="600"
+          HEIGHT="350"
+          SRC="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/tkcon/tkcon/tkcon.tcl?rev=HEAD&content-type=application/x-tcl"
+        >
+        </EMBED>
+  </OBJECT>
 </P>
 
 Have a look at some of the features: (culled from the
@@ -89,8 +107,7 @@ windows and TkCon.  The default keys are
 </TD></TR></TABLE>
 
 <HR NOSHADE SIZE=1>
-<ADDRESS><FONT SIZE=2>&copy;
-<A HREF="mailto:jeff.hobbs@acm.org">Jeffrey Hobbs</A></FONT></ADDRESS>
+<ADDRESS><FONT SIZE=2>&copy; Jeffrey Hobbs</FONT></ADDRESS>
 
 </BODY>
 </HTML>
