@@ -93,7 +93,7 @@ Works with slaves, but not foreign interps.
 
 <HR NOSHADE SIZE=1>
 <ADDRESS><FONT SIZE=2>&copy;
-<A HREF="mailto:jeff.hobbs@acm.org">Jeffrey Hobbs</A></FONT></ADDRESS>
+Jeffrey Hobbs</FONT></ADDRESS>
 
 </BODY>
 </HTML>
