@@ -28,7 +28,7 @@ height="31" border="0" alt="SourceForge Logo"></A>
 <TH><A HREF="docs/index.html">Documentation</A></TH>
 <TH><A HREF="docs/demopic.gif">Screenshot</A></TH>
 <TH><A HREF="docs/plugin.html">Online Demo!</A> (requires
-<A HREF="http://www.tcl-tk.net/software/plugin/">Tk plugin</A>)</TH>
+<A HREF="http://www.tcl.tk/software/plugin/">Tk plugin</A>)</TH>
 <TH><A HREF="docs/license.terms">License</A> </TH>
 
 </TR><TR>
@@ -42,8 +42,8 @@ Archives</B> (high speed server)</A>
 
 <P>
 <B><CODE STYLE="color: #990033;">Last full release:
-<A HREF="http://prdownloads.sourceforge.net/tkcon/tkcon-2.3.tar.gz">v2.3</A>,
-2001-01-24</CODE></B>
+<A HREF="http://prdownloads.sourceforge.net/tkcon/tkcon-2.4.tar.gz">v2.4</A>,
+2004-07-24</CODE></B>
 </P>
 <P>
 You can grab the <A
